# fast_matrix_market-rs

./: .gitignore  Cargo.toml  README.md  ccc_mapping.toml
examples/: bench_read.rs
src/: lib.rs
tests/: app_bindings.rs  chunking.rs  doublet_and_pool.rs  field_conv.rs  formatters.rs  generator_and_backends.rs  header.rs  parse_handlers.rs  read_body.rs  real_world_conformance.rs  write_body.rs
tools/: bench_read_cpp.cpp  benchmark_fixtures.txt  run_threaded_benchmarks.sh
