[package]
name = "fast_matrix_market-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Partial Rust translation of the fast_matrix_market Matrix Market I/O library"
readme = "README.md"
homepage = "https://github.com/alugowski/fast_matrix_market"
documentation = "https://docs.rs/fast_matrix_market-rs"
keywords = ["matrix-market", "sparse", "matrix", "io"]
categories = ["science", "parser-implementations"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/CITATION.cff",
    "/LICENSE.txt",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[lib]
name = "fast_matrix_market"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
