[package]
name = "fast_matrix_market-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Partial Rust translation of the fast_matrix_market Matrix Market I/O library"
readme = "README.md"
homepage = "https://github.com/alugowski/fast_matrix_market"
documentation = "https://docs.rs/fast_matrix_market-rs"
keywords = ["matrix-market", "sparse", "matrix", "io"]
categories = ["science", "parser-implementations"]
include = [
    "/Cargo.toml",
    "/CITATION.cff",
    "/LICENSE.txt",
    "/README.md",
    "/src/**",
    "/tests/*.rs",
    "/tests/fixtures/upstream/tests/matrices/2col_array.mtx",
    "/tests/fixtures/upstream/tests/matrices/eye3.mtx",
    "/tests/fixtures/upstream/tests/matrices/eye3_array.mtx",
    "/tests/fixtures/upstream/tests/matrices/eye3_complex.mtx",
    "/tests/fixtures/upstream/tests/matrices/invalid/invalid_bad_banner.mtx",
    "/tests/fixtures/upstream/tests/matrices/kepner_gilbert_graph.mtx",
    "/tests/fixtures/upstream/tests/matrices/nist_ex1.mtx",
    "/tests/fixtures/upstream/tests/matrices/nist_ex1_freeformat.mtx",
    "/tests/fixtures/upstream/tests/matrices/nist_ex1_more_freeformat.mtx",
    "/tests/fixtures/upstream/tests/matrices/permissive/*.mtx",
    "/tests/fixtures/upstream/tests/matrices/symmetry/coordinate_symmetric_row.mtx",
    "/tests/fixtures/upstream/tests/matrices/vector_coordinate.mtx",
    "/tests/fixtures/upstream/tests/matrices/vector_coordinate_complex.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_array_complex_general.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_array_integer_general.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_coordinate_complex_hermitian.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_coordinate_pattern_general.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_coordinate_pattern_symmetric.mtx",
    "/tests/fixtures/upstream/python/tests/matrices/matrix_coordinate_real_skew-symmetric.mtx",
    "/examples/**",
]

[lib]
name = "fast_matrix_market"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
